fundamentos(notes): fix print style

--- a/Fundamentos/PSeint/styles.css
+++ b/Fundamentos/PSeint/styles.css
@@ -15,23 +15,41 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --monokai-magenta: #fc1a70;
-/*    --monokai-blue: #62d8f1;*/
-/*    --monokai-grey: #898989;*/
-/*    --monokai-green: #a4e400;*/
-/*    --monokai-bg-grey: #252525;*/
-/*    --monokai-bg: #2a2a2a;*/
   }
 }
 
 /* Apply custom properties to your syntax highlighting */
-.code-keyword { color: #ff004b; font-weight: bold; }
-.code-type { color: var(--monokai-blue); font-weight: bold; }
-.code-comment { color: var(--monokai-grey); font-style: italic; }
-.code-function { color: var(--monokai-green); font-weight: bold; }
-.code-string { color: var(--monokai-yellow); font-weight: bold; }
-.code-boolean { color: var(--monokai-purple); font-weight: bold; }
-.code-number { color: var(--monokai-purple); font-weight: bold; }
-.code-secondary { color: var(--monokai-grey); }
+.code-keyword {
+  color: #ff004b;
+  font-weight: bold;
+}
+.code-type {
+  color: var(--monokai-blue);
+  font-weight: bold;
+}
+.code-comment {
+  color: var(--monokai-grey);
+  font-style: italic;
+}
+.code-function {
+  color: var(--monokai-green);
+  font-weight: bold;
+}
+.code-string {
+  color: var(--monokai-yellow);
+  font-weight: bold;
+}
+.code-boolean {
+  color: var(--monokai-purple);
+  font-weight: bold;
+}
+.code-number {
+  color: var(--monokai-purple);
+  font-weight: bold;
+}
+.code-secondary {
+  color: var(--monokai-grey);
+}
 
 /* ---------------------------------------------------------------------- */
 
@@ -43,7 +61,9 @@
   white-space: pre;
 }
 
-.table, .table th, .table td {
+.table,
+.table th,
+.table td {
   border: 1px solid var(--bs-border-color);
   border-collapse: collapse;
 }
@@ -74,17 +94,41 @@ h3 {
 @media print {
   @page {
     size: letter;
-    margin: 10mm;
+    margin: 15mm !important;
+  }
+
+  .container,
+  .container-md,
+  .container-sm {
+    max-width: none !important;
+    width: 100% !important;
+    padding: 0 !important;
   }
 
   body {
-    margin: 0;
-    padding: 0;
+    margin: 0 !important;
+    padding: 0 !important;
+    width: 100% !important;
+  }
+
+  h1 {
+    font-size: 1.75em;
+  }
+  h2 {
+    font-size: 1.5em;
+    margin-top: 0.4em;
+    margin-bottom: 0.25em;
+    page-break-after: avoid;
+  }
+  h3 {
+    font-size: 1.25em;
+    margin-bottom: 0.25em;
   }
 
   .codeblock {
-    page-break-inside: avoid;
-    /*word-wrap: break-word;*/
+    /*page-break-inside: avoid;*/
+    margin-left: 0.5em !important;
+    padding: 1em !important;
   }
 
   .codeblock pre {
@@ -92,5 +136,31 @@ h3 {
     line-height: 1.4;
     margin: 0;
     padding: 0;
+  }
+
+  hr {
+    display: none;
+  }
+
+  table {
+    margin-top: 2em;
+    font-size: -1em;
+    width: 100% important !important;
+    table-layout: fixed !important;
+    max-width: 100% !important;
+    box-sizing: border-box !important;
+    table-layout: fixed !important;
+  }
+
+  .table {
+    width: 100% !important;
+    max-width: 100% !important;
+    box-sizing: border-box;
+
+    width: 100% important !important;
+    table-layout: auto !important;
+    max-width: 100% !important;
+    box-sizing: border-box !important;
+    table-layout: fixed !important;
   }
 }
